Fix: 非表示にしたルームの復元機能追加